--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,16 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap');
 *{
   margin: 0;
   padding: 0;
-}
-
-:root {
-  font-size: 62.5%;
+  box-sizing: border-box;
 }
 
 body {
   height: 100vh;
   color: white;
+  background: #EBF2F5;
+}
+
+:root {
+  font-size: 62.5%;
 }
 
 body, 
