--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -24,7 +24,7 @@
           alt="Logomarca de Happy" />
   
         <div class="location animate-up">
-          <strong>{{ city }}</strong>
+          <strong>São Caetano do Sul</strong>
           <p>São Paulo</p>
         </div>
       </header>
