--- a/public/css/form.css
+++ b/public/css/form.css
@@ -79,7 +79,8 @@ fieldset legend {
 }
 
 .input-block input::placeholder {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
+  color: #8fa7b3;
 }
 
 .input-block textarea {
