--- a/public/css/page-orphanage.css
+++ b/public/css/page-orphanage.css
@@ -97,8 +97,10 @@ main {
   margin-top: 2.4rem;
 
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
   column-gap: 2rem;
+
+  line-height: 1.5;
 }
 
 .open-details div {
@@ -119,9 +121,18 @@ main {
 }
 
 .open-details .open-on-weekends {
+  border-radius: 20px;
+  line-height: 1.5;
+}
+
+.open-on-weekends.open {
   background: linear-gradient(154.16deg, #edfff6 7.85%, #ffffff 91.03%);
   border: 1px solid #b3dae2;
-  border-radius: 20px;
-
   color: #37c77f;
+}
+
+.open-on-weekends.closed {
+  background: linear-gradient(154.16deg, #fcf0f4.85%, #ffffff 91.03%);
+  border: 1px solid #ffbcd4;
+  color: #ff669d;
 }
